========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2016-01-10

  - Addressed issue #96, supporting an explicitly installed C decimal version
    when the Python3 installation does not include one. From
    beancount.core.number:

      Note: Python 3.3 is supposed to guarantee a fast "C" decimal implementation,
      as it comes with its source code. However, in practice, many distributions,
      including the popular Ubuntu distro, simply don't compile it. Other distros
      (e.g., Arch Linux) insist on breaking up Python into multiple packages in
      order to manage the dependency to the mpdec library, and make that
      installation optional. Moreover, there seems to have been changes in the
      dispatching of pure-Python and fast C decimal implementations in Python-3.5's
      source code itself. The result is that despite Python-3.3 or above being
      installed, a fast C decimal implementation may or may not be present. Thus, we
      must detect it here. I believe this subtle problem should go away with
      Python-3.5 and above.

      What do we do? We import the default 'decimal' module, and if it's the pure
      Python implementation, we attempt to import an explicitly installed
      'cdecimal', which you can install with

        pip3 install m3-cdecimal

    Also added a check for this in checkdeps. Hopefully this resolves the issue
    once and for all.


2016-01-09

  - Fixed a bug (issue #94) in the load cache that wouldn't handle files
    disappearing after having been moved.


2016-01-03

  - Moved beancount.web.scrape.scrape() to beancount.web.web.scrape_webapp() to
    isolate beancount.web.scrape from dependencies, so that other projects may
    reuse it.


2015-12-25

  - Closed multiple obsolete branches: parse_test_utils, display_context,
    performance, datatypes.

  - Added some utilities for parsing strings for writing tests that use the