@@ -18,7 +18,7 @@ class TestIraContributions(cmptest.TestCase):
                 'Income:US:Acme:Match401k': (
                     'Assets:US:Federal:Match401k',
                     'Expenses:Taxes:TY{year}:US:Federal:Match401k'),
-                'Assets:US:Fidelity:PreTax401k:Cash': (
+                ('C', 'Assets:US:Fidelity:PreTax401k:Cash'): (
                     'Assets:US:Federal:PreTax401k',
                     'Expenses:Taxes:TY{year}:US:Federal:PreTax401k'),
              }
@@ -40,7 +40,7 @@ class TestIraContributions(cmptest.TestCase):
         2013-02-15 * "ACME INC       PAYROLL"
           Income:US:Acme:Salary                          -4000.00 USD
           Assets:US:BofA:Checking                         1779.50 USD
-          Assets:US:Fidelity:PreTax401k:Cash               620.50 USD
+          C Assets:US:Fidelity:PreTax401k:Cash             620.50 USD
           Expenses:Taxes:TY2013:US:Federal                 900.00 USD
           Expenses:Taxes:TY2013:US:StateNY                 400.00 USD
           Expenses:Taxes:TY2013:US:SocSec                  300.00 USD
@@ -48,6 +48,14 @@ class TestIraContributions(cmptest.TestCase):
         2013-02-17 * "BUYMF - MATCH" | "Employer match, invested in SaveEasy 2030 fund"
           Assets:US:Fidelity:Match401k:SE2030              34.793 SE2030 {17.834 USD}
           Income:US:Acme:Match401k                        -620.50 USD
+
+        2013-03-15 * "ACME INC       PAYROLL"
+          Income:US:Acme:Salary                          -4000.00 USD
+          Assets:US:BofA:Checking                         1779.50 USD
+          Assets:US:Fidelity:PreTax401k:Cash               620.50 USD
+          Expenses:Taxes:TY2013:US:Federal                 900.00 USD
+          Expenses:Taxes:TY2013:US:StateNY                 400.00 USD
+          Expenses:Taxes:TY2013:US:SocSec                  300.00 USD
 
         """
         self.assertFalse(errors)
@@ -69,7 +77,7 @@ class TestIraContributions(cmptest.TestCase):
         2013-02-15 * "ACME INC       PAYROLL"
           Income:US:Acme:Salary                          -4000.00 USD
           Assets:US:BofA:Checking                         1779.50 USD
-          Assets:US:Fidelity:PreTax401k:Cash               620.50 USD
+          C Assets:US:Fidelity:PreTax401k:Cash             620.50 USD
           Expenses:Taxes:TY2013:US:Federal                 900.00 USD
           Expenses:Taxes:TY2013:US:StateNY                 400.00 USD
           Expenses:Taxes:TY2013:US:SocSec                  300.00 USD
@@ -81,6 +89,14 @@ class TestIraContributions(cmptest.TestCase):
           Income:US:Acme:Match401k                        -620.50 USD
           & Assets:US:Federal:Match401k                     -620.50 IRAUSD
           & Expenses:Taxes:TY2013:US:Federal:Match401k       620.50 IRAUSD
+
+        2013-03-15 * "ACME INC       PAYROLL"
+          Income:US:Acme:Salary                          -4000.00 USD
+          Assets:US:BofA:Checking                         1779.50 USD
+          Assets:US:Fidelity:PreTax401k:Cash               620.50 USD
+          Expenses:Taxes:TY2013:US:Federal                 900.00 USD
+          Expenses:Taxes:TY2013:US:StateNY                 400.00 USD
+          Expenses:Taxes:TY2013:US:SocSec                  300.00 USD
 
         2013-02-17 price SE2030                             17.834 USD
 
